feat(game): dialog